fixed minor overflow issue in two subpages

--- a/css/favorites.css
+++ b/css/favorites.css
@@ -73,7 +73,7 @@ body {
   .main {
       padding: 5em 0 0;
       margin: 20px 20px 20px 20px;
-      width: 100%;
+      width: 90%;
       grid-area: m;
   }
   
